--- a/src/rtext.x86.csproj
+++ b/src/rtext.x86.csproj
@@ -66,7 +66,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CellColor.cs" />
-    <Compile Include="FindReplaceData.cs" />
+    <Compile Include="FindReplacer.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
